--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_gemini: ^2.0.5
   provider: ^6.1.2
   shared_preferences: ^2.3.2
+  connectivity_plus: ^4.0.0	
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
