--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_riverpod: ^2.5.3
+  flutter_riverpod: ^2.6.1
   url_launcher: ^6.3.1
   flutter_gemini: ^2.0.5
-  provider: ^6.1.2
   shared_preferences: ^2.3.2
   connectivity_plus: ^4.0.0	
   get: ^4.6.6
+  google_generative_ai: ^0.4.6
+  qr_flutter: ^4.1.0
+  mobile_scanner: ^6.0.2
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
